--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,10 +1,11 @@
-image: cosmwasm/cw-gitpod-base:v0.16
+image: orai/cosmwasm-gitpod:0.11.7
+workspaceLocation: './'
+
+tasks:
+  - name: init-cargo-file
+    init: touch Cargo.toml
 
 vscode:
   extensions:
-    - rust-lang.rust
-
-tasks:
-  - name: Dependencies & Build
-    init: |
-      cargo build
+    - matklad.rust-analyzer
+    - oraichain.cosmwasm-ide
